# Checkers_AI_Agent

./: .gitignore  .gitkeep  README.md  netlify.toml  render.yaml  start-app.bat  start-cli.bat  start-local-dev.bat
algo-isolated/: Checkerboard_Mapping.py  Minimax_Algo.py  checker-board-mapper.py
api/: README.md  pyproject.toml  start-local-api.bat
api/src/api/: dependencies.py  errors.py  main.py  shared_ai_config.py
api/src/api/contracts/: __init__.py  schemas.py
api/src/api/domain/: __init__.py  models.py
api/src/api/engine/: __init__.py  default_engine.py  module_adapter.py  port.py
api/src/api/repositories/: __init__.py  game_repository.py
api/src/api/routers/: __init__.py  games.py  health.py
api/src/api/services/: __init__.py  game_service.py
api/tests/: asgi_client.py  test_api_contract.py  test_checkers_cli_engine_adapter.py  test_cors_configuration.py  test_engine_module_adapter.py  test_engine_port_selection.py  test_shared_ai_config.py  test_state_repository_selection.py
checkers_cli/: .gitignore  README.md  checkers_board.py  cli_game.py  (+3 more)
engine/: API_ENDPOINTS.md  README.md  TEAM_ROLES.md  pyproject.toml
engine/src/engine/: __init__.py  api_contract.py  baseline.py  contracts.py  runtime.py  template_mode.py
engine/src/engine/roles/: __init__.py
engine/src/engine/roles/board_state/: __init__.py  provider.py  templates.py
engine/src/engine/roles/move_generation/: __init__.py  provider.py  templates.py
engine/src/engine/roles/search/: __init__.py  provider.py
engine/tests/: test_api_contract_smoke.py  test_template_mode.py
(+44 files in other folders)
